Variable statistics period
